[gd_scene load_steps=15 format=3 uid="uid://nulnlcupevt1"]

[ext_resource type="Texture2D" uid="uid://d2bgcmr2ug8x2" path="res://sprites/characters/player.png" id="1_8mjq6"]
[ext_resource type="Script" path="res://scripts/characters/player.gd" id="1_xytm6"]
[ext_resource type="Texture2D" uid="uid://bcs18vphqmrew" path="res://sprites/background/pixel.png" id="3_iotkr"]
[ext_resource type="AudioStream" uid="uid://b17vk1rcx4ij6" path="res://sounds/effects/hurt.mp3" id="4_gyxxd"]
[ext_resource type="AudioStream" uid="uid://dhit6ryvdut7l" path="res://sounds/effects/attack.mp3" id="5_5eghl"]
[ext_resource type="Texture2D" uid="uid://b3a88mrc8r4mq" path="res://sprites/characters/Shadow.png" id="6_65tqd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xi8t"]
size = Vector2(121, 123)

[sub_resource type="Animation" id="Animation_mq852"]
resource_name = "PlayerDown"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0011654, 0.153255),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(2, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.35, 1.35)]
}

[sub_resource type="Animation" id="Animation_a4v26"]
resource_name = "PlayerLeft"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0011654, 0.153255),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1.35, 1.35)]
}

[sub_resource type="Animation" id="Animation_p3v3s"]
resource_name = "PlayerRight"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0011654, 0.153255),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 2), Vector2i(2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.35, 1.35)]
}

[sub_resource type="Animation" id="Animation_efill"]
resource_name = "PlayerUp"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0011654, 0.153255),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(1, 1), Vector2i(2, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.35, 1.35)]
}

[sub_resource type="Animation" id="Animation_2ntlr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.35, 1.35)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ytqg5"]
_data = {
"PlayerDown": SubResource("Animation_mq852"),
"PlayerLeft": SubResource("Animation_a4v26"),
"PlayerRight": SubResource("Animation_p3v3s"),
"PlayerUp": SubResource("Animation_efill"),
"RESET": SubResource("Animation_2ntlr")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_gg4qq"]
radius = 41.9762

[node name="Player" type="CharacterBody2D" groups=["Persistent", "Players", "World"]]
script = ExtResource("1_xytm6")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 10
texture_filter = 1
texture_repeat = 1
scale = Vector2(1.35, 1.35)
texture = ExtResource("1_8mjq6")
hframes = 4
vframes = 4
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 33.5)
shape = SubResource("RectangleShape2D_2xi8t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ytqg5")
}

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, 100)
shape = SubResource("CircleShape2D_gg4qq")

[node name="Pixel" type="Sprite2D" parent="AttackArea/CollisionShape2D"]
visible = false
modulate = Color(0, 0, 0, 0.423529)
position = Vector2(-1.66893e-06, 3.5)
scale = Vector2(84, 77)
texture = ExtResource("3_iotkr")

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_gyxxd")

[node name="AttackSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_5eghl")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(1.00001, 61)
scale = Vector2(1.46667, 1.46667)
texture = ExtResource("6_65tqd")

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
